content: update product tiles

--- a/src/content/get-started.mdx
+++ b/src/content/get-started.mdx
@@ -22,31 +22,43 @@ Since our templates are not just static page examples, but functional, productio
     {[
       {
         title: "Once UI Core",
-        description: "The design system that powers all our products.",
+        description: "Build with an open-source design system",
         image: "/images/docs/once-ui.jpg",
         href: "/once-ui/quick-start"
       },
       {
         title: "Magic Portfolio",
-        description: "Showcase your work with our beautiful portfolio template.",
+        description: "Showcase your work with a beautiful portfolio template",
         image: "/images/docs/magic-portfolio.jpg",
         href: "/magic-portfolio/quick-start"
       },
       {
         title: "Magic Docs",
-        description: "Create beautiful documentations like this one.",
+        description: "Create beautiful documentations like this one",
         image: "/images/docs/magic-docs.jpg",
         href: "/magic-docs/quick-start"
       },
       {
         title: "Magic Store",
-        description: "Start selling merch with a ready-made store.",
+        description: "Start selling merch with a ready-made storefront",
         image: "/images/docs/magic-store.jpg",
         href: "/magic-store/quick-start"
       },
       {
+        title: "Magic Convert",
+        description: "Launch your conversion-optimized landing page",
+        image: "/images/docs/magic-convert.jpg",
+        href: "/magic-convert/quick-start"
+      },
+      {
+        title: "Magic Agent",
+        description: "Build your chatbot with the Vercel AI SDK",
+        image: "/images/docs/magic-agent.jpg",
+        href: "/magic-agent/quick-start"
+      },
+      {
         title: "Magic Bio",
-        description: "A modern link-in-bio solution for creators.",
+        description: "Launch a modern link-in-bio page",
         image: "/images/docs/magic-bio.jpg",
         href: "/magic-bio/quick-start"
       }
